# pro-serde-versioned

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yaml
pro-serde-versioned/: Cargo.toml
pro-serde-versioned-derive/: Cargo.toml
pro-serde-versioned-derive/src/: lib.rs
pro-serde-versioned/src/: formats.rs  lib.rs
pro-serde-versioned/tests/: basic_tests.rs
versioning/: Cargo.toml  test.rs
versioning-derive/: Cargo.toml
versioning-derive/src/: lib.rs
versioning-rmp/: Cargo.toml
versioning-rmp/src/: lib.rs
versioning/src/: formats.rs  lib.rs
