[package]
name = "versioning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.59", features = ["derive"] }

[dev-dependencies]
versioning-derive = { path = "../versioning-derive" }
serde_json = { version = "1.0.59", features = ["raw_value"] }
rmp-serde = "1.1.1"